🐛 prevent from scraping episodes only when TV show has not been scraped yet